images/php/laravel/public/assets/all.css
/* ... */
.entradas-de-texto-govco input[type="text"],
.entradas-de-texto-govco input[type="password"],
.entradas-de-texto-govco input[type="mail"],
.entradas-de-texto-govco input[type="tel"],
.entradas-de-texto-govco input[type="text"]::placeholder,
.entradas-de-texto-govco input[type="password"]::placeholder,
.entradas-de-texto-govco input[type="mail"]::placeholder,
.entradas-de-texto-govco input[type="tel"]::placeholder,
.entradas-de-texto-govco label {
  font-size: 15px;
  font-family: "Verdana-Regular";
  color: var(--govcolor-matterhorn);
}

.entradas-de-texto-govco input[type="text"]:not(.browser-default):active:not([readonly]),
.entradas-de-texto-govco input[type="password"]:not(.browser-default):active:not([readonly]),
.entradas-de-texto-govco input[type="mail"]:not(.browser-default):active:not([readonly]),
.entradas-de-texto-govco input[type="tel"]:not(.browser-default):active:not([readonly]),
.entradas-de-texto-govco input[aria-invalid="false"]:not(.browser-default):active:not([readonly]),
.entradas-de-texto-govco input[aria-invalid="true"]:not(.browser-default):active:not([readonly]) {
  border-color: var(--govcolor-matterhorn);
}

.entradas-de-texto-govco input[type="text"]:not(.browser-default):focus-visible:not([readonly]),
.entradas-de-texto-govco input[type="password"]:not(.browser-default):focus:not([readonly]),
.entradas-de-texto-govco input[type="mail"]:not(.browser-default):focus:not([readonly]),
.entradas-de-texto-govco input[type="tel"]:not(.browser-default):focus:not([readonly]),
.entradas-de-texto-govco input[aria-invalid="false"]:not(.browser-default):focus:not([readonly]),
.entradas-de-texto-govco input[aria-invalid="true"]:not(.browser-default):focus:not([readonly]) {
  box-shadow: none;
}

.entradas-de-texto-govco input[type="text"]:not(.browser-default):focus-visible:not([readonly]):not(:active),
.entradas-de-texto-govco input[type="password"]:not(.browser-default):focus-visible:not([readonly]):not(:active),
.entradas-de-texto-govco input[type="mail"]:not(.browser-default):focus-visible:not([readonly]):not(:active),
.entradas-de-texto-govco input[type="tel"]:not(.browser-default):focus-visible:not([readonly]):not(:active),
.entradas-de-texto-govco input[aria-invalid="false"]:not(.browser-default):focus-visible:not([readonly]):not(:active),
.entradas-de-texto-govco input[aria-invalid="true"]:not(.browser-default):focus-visible:not([readonly]):not(:active) {
  border-width: 0.125rem;
  border-color: var(--govcolor-havelock-lue);
  outline: max(0.125rem, 0.125rem) solid var(--govcolor-black);
  outline-offset: max(0.125rem, 0.125rem);
  color: var(--govcolor-matterhorn);
}

.entradas-de-texto-govco input[type="text"]:disabled,
.entradas-de-texto-govco input[type="password"]:disabled,
.entradas-de-texto-govco input[type="mail"]:disabled,
.entradas-de-texto-govco input[type="tel"]:disabled {
  background-color: var(--govcolor-silver-dis);
  border-style: solid;
  border-color: var(--govcolor-matterhorn);
}

.entradas-de-texto-govco span {
  font-size: 15px;
  font-family: "Verdana-Regular";
  color: var(--govcolor-matterhorn);
  display: block;
  width: 100%;
  line-height: 1.25rem;
}

/* Validaciones */
.entradas-de-texto-govco .input-container span.govco-svg {
  width: 1.5rem;
  height: 1.5rem;
  background-size: 1.5rem 1.5rem;
  display: none;
  position: absolute;
  right: 0.625rem;
  top: 0.5rem;
}

.entradas-de-texto-govco .input-container input[typedata="password"] ~ span.error,
.entradas-de-texto-govco .input-container input[typedata="password"] ~ span.success {
  right: 2.375rem;
}

.entradas-de-texto-govco .input-container span.success {
  filter: var(--govcolor-svg-green);
}

.entradas-de-texto-govco .input-container span.error {
  filter: var(--govcolor-svg-red);
}

.entradas-de-texto-govco input[aria-invalid="false"]:not([value=""])~span.success,
.entradas-de-texto-govco input[aria-invalid="true"]:not([value=""])~span.error {
  display: block;
}

.entradas-de-texto-govco input[aria-invalid="false"]:not([value=""]) {
  border-color: var(--govcolor-green);
  color: var(--govcolor-green);
}

.entradas-de-texto-govco input[aria-invalid="true"]:not([value=""]) {
  border-color: var(--govcolor-red);
  color: var(--govcolor-red);
}

.entradas-de-texto-govco .success-text-govco {
  color: var(--govcolor-green);
}

.entradas-de-texto-govco .error-text-govco {
  color: var(--govcolor-red);
}

/* Contador */
.entradas-de-texto-govco span.counter-text {
  color: var(--govcolor-silver-dis);
  text-align: right;
}

.entradas-de-texto-govco input[type="text"]:not([value=""])+span.counter-text,
.entradas-de-texto-govco input[type="text"]:active+span.counter-text {
  color: var(--govcolor-matterhorn);
}

/* Con contraseña */
.entradas-de-texto-govco .input-container {
  position: relative;
}

.entradas-de-texto-govco .input-container button {
  border: 0;
  padding: 0;
  background-color: transparent;
  line-height: 1.25rem;
  display: flex;
  align-items: center;
  position: absolute;
  right: 0.625rem;
  top: 0.625rem;
}

.entradas-de-texto-govco .input-container button::after {
  font-size: 1.25rem;
  color: var(--govcolor-matterhorn);
}

.entradas-de-texto-govco input[type="text"]:focus-visible~button::after {
  color: var(--govcolor-havelock-lue);
}

.entradas-de-texto-govco input:disabled~button,
.entradas-de-texto-govco input[type="text"]:disabled~button {
  cursor: default;
}

/* ===================================== Carga de Archivos ===================================== */
.carga-archivo-govco .loader-carga-archivo-govco {
  margin-bottom: 0.438rem;
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  row-gap: 0.625rem;
}

.carga-archivo-govco .all-input-carga-archivo-govco {
  display: inline-block;
  position: relative;
}

.carga-archivo-govco .label-carga-archivo-govco {
  font-family: 'Verdana-Regular';
  font-size: 15px;
  color: var(--govcolor-black);
  display: block;
}
/* ... */

